#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana_examples
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-06
2013-12-02 Andy Salnikov
- add C++ modules DumpEpixSampler and DumpRayonix
- add Python module dump_epixsampler

Tag: V00-04-05
2013-10-07 Andy Salnikov
- add C++ modules for Alias and L3T
- add control.ConfigV3 class to C++ DumpControl module
- add bld.BldDataEBeamV4 class to C++ DumpBld module
- add bld.BldDataSpectrometerV0 class to C++ DumpBld module
- add python modules for Alias, L3T, and Evr

Tag: V00-04-04
2013-09-17 Andy Salnikov
- documentation generation changed in SConsTools, updating SConscript

Tag: V00-04-03
2013-05-22 Andy Salnikov
- fix dump_imp.py

Tag: V00-04-02
2013-05-22 Andy Salnikov
- few mods to Imp examples

Tag: V00-04-01
2013-05-21 Andy Salnikov
- adding examples for Imp classes

Tag: V00-04-00
2013-05-01 Andy Salnikov
- modify Python examples to use new convention for configuration data access

Tag: V00-03-17
2013-04-26 Andy Salnikov
- add ConfigV5 to DumpCsPad

Tag: V00-03-16
2013-03-29 Andy Salnikov
- small improvements in DumpAcqTdc

Tag: V00-03-15
2013-03-28 Andy Salnikov
- small improvements in DumpAcqiris

Tag: V00-03-14
2013-03-27 Andy Salnikov
- DumpEpics now prints list of aliases in beginCalibCycle()

Tag: V00-03-13
2013-03-27 Andy Salnikov
- dump more info for cspad and cspad2x2

Tag: V00-03-12
2013-03-25 Andy Salnikov
- DumpPrinceton: convert some values to integers before printing

Tag: V00-03-11
2013-03-24 Andy Salnikov
- DumpEncoder: added ConfigV2

Tag: V00-03-10
2013-03-23 Andy Salnikov
- small update to DumpFccd

Tag: V00-03-09
2013-03-22 Andy Salnikov
- small update to DumpFli

Tag: V00-03-08
2013-03-22 Andy Salnikov