@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-07
+2013-12-16 David Schneider
+- add C++ module DumpDamage
+
 Tag: V00-04-06
 2013-12-02 Andy Salnikov
 - add C++ modules DumpEpixSampler and DumpRayonix
